feat: complete POS frontend, electron setup, product options support, and print fixes